# talktrace-ai-base

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.de.md  FEATURES.md  NOTICE  README.de.md  README.md  SECURITY.md  TalkTraceAI.spec  build.bat  dev.bat  dev.sh  launcher.py  pyproject.toml  requirements.txt  start.bat  start.sh  start_debug.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml
00_meta/: roadmap_2026.md
docs/: gdpr-provider-notes.md  noscribe-module-plan.md  standalone-build-plan.md
images/: Example Codebook.docx
talktrace_ai/: app.py  consent.py  myfuncs.py  paths.py  state.py  theme.py  transcript_analyzer.py
talktrace_ai/config/: config_manager.py  default_config.ini
talktrace_ai/examples/: demo.py  tseda.py
talktrace_ai/handlers/: _common.py  analysis.py  consent.py  feedback.py  info.py  noscribe.py  onboarding.py  options.py  results.py  server_body.py  start.py
talktrace_ai/localization/: de.py  en.py  translation.py
talktrace_ai/static/: noscribe_trim.js  styles.css  theme.css  theme_sync.js  tooltip_quickstart.js
talktrace_ai/ui/: analysis_tab.py  consent_tab.py  feedback_tab.py  head.py  info_tab.py  options_tab.py  results_tab.py  sidebar.py  start_tab.py  transcription_tab.py
talktrace_ai/utils/: _audio_trim.py  _config.py  codebook_hierarchy.py  cost_tracker.py  credentials.py  feedback_section.py  file_io.py  fingerprint.py  history.py  intercoder.py  intercoder_export.py  intercoder_metrics.py  intercoder_parse.py  llm_cache.py  llm_clients.py  methods_section.py  noscribe_engine.py  plot_style.py  qualitative.py  report_import.py  reports.py  self_test.py  sequence_analysis.py  stats.py  text.py  (+1 more)
tests/: _codebook_hierarchy_smoke.py  _stream_parse_smoke.py  _stream_providers_smoke.py  test_consent.py  test_custom_providers.py  test_feedback.py  test_fingerprint.py  test_intercoder_metrics.py  test_localization_parity.py  test_noscribe_trim.py  test_report_import.py  test_smoke.py  test_stats.py  test_transcript_analyzer.py  test_transcript_format.py  test_tseda_confidence.py
(+27 files in other folders)
